[ALLI-4022] Fix overflowing timeline on front page

--- a/themes/national/less/national.less
+++ b/themes/national/less/national.less
@@ -3,6 +3,13 @@
         margin: 0px 0px 50px;   
     }
 }
+.right-column-content {
+    @media (max-width: @screen-xs-max) {
+        margin-left: -15px;
+        margin-right: -15px;
+        padding-bottom: 20px;
+    }
+}
 .info-text {
     position: absolute;
     top: 0;
@@ -77,7 +84,6 @@
                 }   
             }
             & .content {
-                width: @container-large-desktop - 15;
                 & .fa-spinner {
                     left: 550px;
                 }
@@ -85,13 +91,13 @@
                     border-radius: 5px;
                     box-shadow: 0 5px 20px -26px;   
                 }
-                @media (min-width: @screen-sm) and (max-width: @screen-md) {
+                @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
                     width: @screen-sm - 35;
                     & .fa-spinner {
                         left: 350px;
                     }
                 }
-                @media (min-width: @screen-md) and (max-width: (@screen-lg - 1)) {
+                @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
                     width: @screen-md - 40;
                     & .fa-spinner {
                         left: 460px;
